<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gu.zhichenghw1.Question1Fragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/questionFigure"
        style="@style/QuestionTextStyle"
        android:text="@string/question2"
        android:id="@+id/textView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:hint="@string/hint"
        android:paddingTop="10dp"
        android:background="@color/colorPrimaryLight"
        android:id="@+id/editText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:text="@string/previous"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:id="@+id/previousButton"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:id="@+id/nextButton"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
